# swiftwasm

./: CMakeLists.txt  _XCTest.ll  azure-pipelines.yml  build-linux.sh  build-mac.sh  ci-linux.sh  ci-mac.sh  fakeld  foo.ll  katei.ll
.github/: pull.yml
.github/workflows/: main.yml  toolchain.yml
benchmark/: CMakeLists.txt
benchmark/cmake/modules/: AddSwiftBenchmarkSuite.cmake
benchmark/scripts/: Benchmark_Driver  run_smoke_bench
cmake/modules/: AddSwift.cmake  FindICU.cmake  SwiftConfigureSDK.cmake  SwiftExternalBenchmarkBuild.cmake  SwiftSharedCMakeInit.cmake  SwiftUtils.cmake
include/swift/ABI/: Metadata.h  MetadataValues.h  TrailingObjects.h
include/swift/AST/: DiagnosticsFrontend.def  IRGenOptions.h  SILOptions.h  Type.h  Types.h
include/swift/Basic/: AbsolutePointer.h  FileTypes.def  LangOptions.h  Lazy.h  RelativePointer.h
include/swift/Demangling/: Demangler.h
include/swift/Driver/: Action.h
include/swift/Frontend/: FrontendOptions.h
include/swift/IRGen/: Linking.h
include/swift/Option/: FrontendOptions.td  Options.td
include/swift/Reflection/: Records.h  ReflectionContext.h
include/swift/Runtime/: ConcurrentWASI.h
include/swift/SIL/: SILInstruction.h
include/swift/SILOptimizer/PassManager/: Passes.h
include/swift/Serialization/: ModuleSummary.h
lib/AST/: ASTMangler.cpp  ProtocolConformance.cpp
lib/Basic/: LangOptions.cpp  Platform.cpp
lib/ClangImporter/: ClangImporter.cpp
lib/Demangling/: Demangler.cpp  Remangler.cpp
lib/Driver/: CMakeLists.txt  DarwinToolChains.cpp  Driver.cpp  ToolChains.cpp  ToolChains.h  UnixToolChains.cpp
lib/Frontend/: ArgsToFrontendOptionsConverter.cpp  CompilerInvocation.cpp  Frontend.cpp  FrontendOptions.cpp
lib/FrontendTool/: FrontendTool.cpp
lib/IRGen/: ClassMetadataVisitor.h  ConstantBuilder.h  GenBuiltin.cpp  GenCall.cpp  GenClass.cpp  GenDecl.cpp  GenFunc.cpp  GenFunc.h  GenKeyPath.cpp  GenMeta.cpp  GenProto.cpp  GenReflection.cpp  IRGen.cpp  IRGenMangler.cpp  IRGenModule.cpp  IRGenModule.h  IRGenSIL.cpp  Linking.cpp  MetadataRequest.cpp
lib/LLVMPasses/: CMakeLists.txt  LLVMSwiftCCLowering.cpp
lib/LTO/: CMakeLists.txt  CrossModuleDFE.cpp  LTO.cpp  Passes.h
lib/SIL/: SILVerifier.cpp  TypeLowering.cpp
lib/SIL/IR/: SILInstructions.cpp
lib/SIL/Verifier/: SILVerifier.cpp
lib/SILGen/: SILGenExpr.cpp
lib/SILOptimizer/IPO/: CrossDeadFunctionElimination.cpp
lib/SILOptimizer/PassManager/: PassPipeline.cpp
lib/Sema/: TypeCheckProtocol.h  TypeCheckProtocolInference.cpp
lib/Serialization/: CMakeLists.txt  Deserialization.cpp  DeserializeSIL.cpp  ModuleFormat.h  ModuleSummaryFormat.cpp  ModuleSummaryFormat.h  ModuleSummaryIndexer.cpp  Serialization.cpp  SerializeSIL.cpp  SerializedModuleLoader.cpp
stdlib/: CMakeLists.txt
stdlib/cmake/modules/: AddSwiftStdlib.cmake  SwiftSource.cmake
stdlib/private/: CMakeLists.txt
stdlib/private/StdlibUnittest/: CMakeLists.txt  StdlibCoreExtras.swift  StdlibUnittest.swift
stdlib/private/SwiftPrivateLibcExtras/: CMakeLists.txt
stdlib/private/SwiftPrivateThreadExtras/: CMakeLists.txt
stdlib/public/: CMakeLists.txt
stdlib/public/Darwin/: CMakeLists.txt
stdlib/public/Platform/: CMakeLists.txt  glibc.modulemap.gyb
stdlib/public/Reflection/: TypeRefBuilder.cpp
stdlib/public/SwiftShims/: CMakeLists.txt
stdlib/public/WASI/: CMakeLists.txt
stdlib/public/core/: CMakeLists.txt  ExistentialCollection.swift.gyb  KeyPath.swift  SmallString.swift  StringBridge.swift  StringGuts.swift  StringObject.swift  StringStorage.swift
stdlib/public/runtime/: CMakeLists.txt  Casting.cpp  Demangle.cpp  ErrorObject.h  HeapObject.cpp  ImageInspectionCOFF.cpp  ImageInspectionELF.cpp  ImageInspectionELF.h  ImageInspectionMachO.cpp  Metadata.cpp  MetadataLookup.cpp  Private.h  ProtocolConformance.cpp  SwiftRT-ELF.cpp  SwiftRT-WASM.cpp  ThreadLocalStorage.h
stdlib/tools/swift-reflection-test/: swift-reflection-test.c
stdlib/unittests/: CMakeLists.txt
stdlib/unittests/runtime/: CompatibilityOverride.cpp
test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
test/Driver/: emit-module-summary.swift  link-time-opt-darwin.swift  link-time-opt.swift  working-directory.swift
test/Driver/Inputs/lto/: lib.swift
test/Frontend/: emit-module-summary.swift
test/Generics/: associated_type_anchor_rdar47605019.swift
test/IRGen/: generic_structs.sil  indirect_func_call_wasm.sil
test/LTO/: dead_vtable_entry.swift  vtable_elimination.swift
test/LTO/Inputs/: lib.swift
test/Runtime/Inputs/: katei.swift
test/SILGen/: magic_identifier_file_conflicting.swift.gyb
test/Serialization/: empty_module_summary.swift  function_summary.swift  module_summary_tables.swift
test/StdlibUnit/: lit.cfg  lit.site.cfg.in
test/stdlib/: Error.swift  Float.swift
tools/driver/: autolink_extract_main.cpp  cross_module_opt_main.cpp  driver.cpp
tools/sil-llvm-gen/: SILLLVMGen.cpp
tools/sil-opt/: SILOpt.cpp
tools/swift-module-summary-test/: swift-module-summary-test.cpp
tools/swift-reflection-dump/: swift-reflection-dump.cpp
unittests/: CMakeLists.txt
unittests/Driver/: FineGrainedDependencyGraphTests.cpp
utils/: build-script  build-script-impl  run-test
utils/build_swift/: driver_arguments.py
utils/build_swift/build_swift/: driver_arguments.py
utils/swift_build_support/swift_build_support/: host_specific_configuration.py  targets.py
utils/swift_build_support/swift_build_support/products/: __init__.py  swift.py  swiftstdlib.py
utils/update_checkout/: update-checkout-config.json
utils/wasi/: build-toolchain
utils/webassembly/: build-linux.sh  build-mac.sh  build-toolchain.sh  ci-linux.sh  ci-mac.sh  static-executable-args.lnk  static-stdlib-args.lnk
validation-test/: lit.site.cfg.in
